quick css vw change

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         @font-face {
             font-family: 'digital-clock-font';
@@ -19,10 +19,11 @@
             margin-top: 0px;
             font-family: 'digital-clock-font';
             color:#ffcc00;
+            max-width: 100%;
         }
 
         #clock {
-            font-size: 300px;
+            font-size: 30vw;
         }
     </style>
 </head>
